# ggml-rs

./: Cargo.toml  README.md
examples/: ggml.rs
src/: lib.rs  main.rs
