[package]
name = "ggml-rs"
version = "0.1.0"
edition = "2024"
description = "GGML for Rust"
license = "MIT"
repository = "https://github.com/zTgx/ggml-rs"
readme = "README.md"
keywords = ["ggml", "llm", "tensor", "algebra"]

[dependencies]
regex = "1.10"
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "cli"
path = "src/main.rs"